common_static/css/main.css
/* ... */
.logo a
{
	text-decoration: none;
	color: #000000;
}

.logo .healthy
{
	color: #f35a20;
	font-weight: bold;
}

.beta {
	float: left;
	font-style: italic;
	letter-spacing: 2px;
}

.navbar { color: #999999; }

.navbar .nav
{
	margin: 0;
	float: right;
	font-size: 13px;
	line-height: 14px;
}

.navbar-inner
{
	background-color: #FFFFFF;
	background-image: none;
	background-repeat: repeat-x;
	border-radius: 0 0 0 0;
	box-shadow: none;
	margin: 0 auto;
	min-height: 40px;
	padding-left: 0px;
	padding-right: 0px;
	width: 940px;
	border-bottom: 1px solid #dfdfdf;
	filter: none;
}

.navbar .nav > li
{
	display: block;
	float: left;
	padding: 0 0 0 10px;
}

.navbar .nav > li.town-list { padding: 0; }

.navbar .nav > li > a
{
	color: #3A3A3A;
	font-weight: bold;
	line-height: 16px;
	padding: 37px 10px 40px;
padding:37px 6px 40px;
font-size: 12px;
	text-decoration: none;
	text-shadow: none;
}

.navbar .nav > li > a:hover
{
	background-color: transparent;
	color: #f35a20;
	text-decoration: none;
	border-bottom: 2px solid #f35a20;
	border-top: 6px solid #f35a20;
	padding: 31px 6px 39px;
}

.about .navbar .nav > li > a.about,
.home .navbar .nav > li > a.home
{
background-color: transparent;
	color: #f35a20;
	text-decoration: none;
	border-bottom: 2px solid #f35a20;
	border-top: 6px solid #f35a20;
        padding: 31px 6px 39px;
	
}


.summary .navbar .nav > li > a.cominfo,
.profile .navbar .nav > li > a.cominfo,
.datastories .navbar .nav > li > a.cominfo,
.programs .navbar .nav > li > a.cominfo

{
background-color: transparent;
	color: #f35a20;
	text-decoration: none;
	border-bottom: 2px solid #f35a20;
	border-top: 6px solid #f35a20;
 padding: 23px 6px 31px;	}



.navbar .nav > li > a.maptool
{
color: #CCCCCC;
}


.navbar .nav > li > a.cominfo { padding: 29px 6px 32px; }
.navbar .nav > li > a.cominfo:hover { padding: 23px 6px 31px; }

.navbar .nav li label
{
	color: #3A3A3A;
	font-size: 11px;
	margin-bottom: 0;
	margin-top: 14px;
	text-align: left;
}

ul.sidenav
{
	padding: 0;
	margin: 20px 0;
}

ul.sidenav > li
{
	padding: 0;
	margin: 0;
	display: block;
}

ul.sidenav > li a:link,
ul.sidenav > li a:visited
{
	color: #3a3a3a;
	display: block;
	padding: 6px 8px 6px 12px;
	margin-top: 6px;
}

ul.sidenav > li a:hover,
ul.sidenav > li a:active
{
	color: #3a3a3a;
	background-color: #fcded3;
	text-decoration: none;
	font-weight: bold;
}


ul.sidenav li.town-list
{
margin-top: 30px;
}

.datastories li.data_stories a { background-color: #fcded3; }
.summary li.summary a { background-color: #fcded3; }
.profile li.profile a { background-color: #fcded3; }
.programs li.health_programs a { background-color: #fcded3; }
.current { background-color: #fcded3; font-weight:bold; }

li.town-list select
 {
   width: 165px;
 }
.row { margin: 0; }

.row-fluid .span9
{
	border-left: 1px solid #DFDFDF;
	margin-left: 0;
	min-height: 400px;
	padding-left: 22px;
	text-align: left;
    width: 77%;
}

.row-fluid .span12 { margin-left: 0; }
.row-fluid .span3 { text-align: left; width: 22.4043%;}

.visualization-text
{
background-color: #EFEFEF;
    float: right;
    font-size: 13px;
    line-height: 15px;
    margin-left: 10px;
    padding: 15px;
    width: 190px;
}

.vis_placeholder { width: 707px; height: 78px; border: 1px solid #dfdfdf; margin: 10px 0;}

.story-abstract { padding-top: 12px; }

.storytitle { width: 580px; }

.page
{
clear: both;
}

.next-prev
{
	font-weight: bold;
	text-align: right;
	padding-top: 12px;
	font-size: 14px;
	line-height: 15px;
	color: #000000;
    display: block;
    width: 700px;
    clear: both;
    font-family: Arial, sans-serif;
}


.top-next-prev
{
float: right;
margin-bottom: 6px;
width: 100px;

}


.next-prev a:link,
.next-prev a:visited { color: #f35a20; }

.next-prev a:hover,
.next-prev a:active
{
	color: #6D6E71;
	text-decoration: none;
}

.program
{
margin-top: 50px;
clear: both;
}

.program > a {
	text-decoration: none;
}

.place_program_desc
{
margin-top: 30px;
}

.program-image
{
margin-left: 10px;
}

.health-profile-summary, .datastories-summary, .health-programs-summary
{
border-bottom: 1px solid #dfdfdf;
    margin-top: 20px;
    padding-bottom: 10px;
}

.health-profile-summary
{
margin-top: 0;
}

.health-programs-summary .summary-box a
{
text-decoration: none;

}


.summary-visualizations .row-of-visualizations {
    margin-top: 10px;
}

.place_program_desc
{
padding-left: 10px;
}

.programs-staff-info
{
background-color: #EFEFEF;
padding: 10px;
margin-top: 10px;
}
.story_links { display: block; overflow: hidden; width: 700px; margin-top: 20px; }

.story_sum
{
background-color: #EFEFEF;
    float: left;
    font-size: 13px;
    height: auto;
    margin-left: 12px;
    margin-right: 0;
    min-height: 70px;
    padding: 10px;
    width: 205px;
}

.story_sum:first-child
{
margin-left: 0;
}

.story_sum .link_title
{
	font-weight: bold;
}

.story_sum .thumbnail
{
	width: 75px;
	margin-left: 10px;
}

.home #mamc_map_container
{
	width: 920px;
	height: 460px;
	border: 1px solid #dfdfdf;
	display: block;
	margin-top: 15px;
	padding: 10px;
	background-color: white;
}

.home #mamc_map
{
	width: 918px;
	height: 458px;
	border: 1px solid #dfdfdf;
}

.map-thumb {
	width: 120px;
	float: left;
	margin-right: 8px;
	border: 1px solid #DFDFDF
}

/*home_slider*/
.home_slider
{
	width: 940px;
	height: 244px;
	background: #fff;
	margin-bottom: 6px;
	position: relative;
	margin-top: 8px;
}

.home_slide
{
	overflow: hidden;
	width: 700px;
	height: 244px;
	position: absolute;
	left: 0;
	top: 0;
}

.home_slide_box
{
	overflow: hidden;
	width: 700px;
	height: 244px;
	color: #fff;
}

.home_slide_nav
{
	overflow: hidden;
	position: absolute;
	right: 0;
	top: 0;
	width: 240px;
	height: 244px;
	z-index: 10;
	background-color: #666769;
}
/* ... */

